--- a/dumpconfig/config.yaml
+++ b/dumpconfig/config.yaml
@@ -1,26 +1,61 @@
 ---
-Broker:
-  Enabled: true
-  Plugin: nats
-  Addresses:
+broker:
+  addresses:
     - nats://localhost:4222
-Client:
-  Enabled: true
-  Plugin: grpc
-  PoolSize: 100
-  PoolTTL: 5m
-  PoolRequestTimeout: 10s
-  PoolRetries: 5
-Server:
-  Enabled: true
-  Plugin: grpc
-  RegisterTTL: 30
-  RegisterInterval: 60
-Registry:
-  Enabled: true
-  Plugin: nats
-  Addresses:
+  plugin: nats
+  logger:
+    enabled: true
+    plugin: zap
+    fields:
+      component: broker
+    level: trace
+client:
+  content_type: application/protobuf
+  enabled: true
+  logger:
+    enabled: true
+    plugin: zap
+    fields:
+      component: client
+    level: trace
+  plugin: grpc
+  pool_request_timeout: 10s
+  pool_retries: 5
+  pool_size: 100
+  pool_ttl: 5m
+server:
+  enabled: true
+  logger:
+    caller_skip_count: 2
+    enabled: true
+    plugin: zap
+    fields:
+      component: server
+    level: info
+  plugin: grpc
+  register_interval: 60
+  register_ttl: 30
+logger:
+  enabled: true
+  plugin: zap
+  fields:
+    component: default
+  level: trace
+registry:
+  addresses:
     - nats://localhost:4222
-Transport:
-  Enabled: true
-  Plugin: quic
+  plugin: nats
+  logger:
+    enabled: true
+    plugin: zap
+    fields:
+      component: registry
+    level: trace
+transport:
+  logger:
+    enabled: true
+    plugin: zap
+    fields:
+      component: transport
+    level: trace
+  plugin: quic
